--- a/mobile/web/resources/css/release_venue.css
+++ b/mobile/web/resources/css/release_venue.css
@@ -6,6 +6,7 @@
 	width: 100%;
 }
 .partnersBox{
+	font-size: 1.6rem;
 	padding: 3rem;
 }
 .partnersTit{
@@ -18,7 +19,7 @@
 }
 .oldPwd span{
 	display: inline-block;
-	width: 20%;
+	width: 22%;
 	height: 10rem;
 	font: 2.3rem/10rem "微软雅黑";
 }
@@ -53,7 +54,7 @@
 	margin-top: 1rem;
 }
 
-.oldPwd a{
+.oldPwd>a{
 	display: block;
 	width: 100%;
 	height: 7rem;
@@ -65,13 +66,25 @@
 	margin-top: 1rem;
 }
 
+.oldPwd>span>a{
+	display: inline-block;
+	height: 5rem;
+	color: #fff;
+	text-align: center;
+	font: 2.3rem/5rem "微软雅黑";
+	border: none;
+	width: 20%;
+	margin-left: 2rem;
+	background-color: #3072f6;
+}
+
 /*ID card*/
 .field_info .fieldTit{
 	font: 2.3rem/6rem "微软雅黑";
 }
 .fieldTit .add{
 	margin-left: 0.4rem;
-	width: 16%;
+	width: 20%;
 	height: 5rem;
 	color: #fff;
 	text-align: center;
@@ -95,7 +108,15 @@
 	max-width: 100%;
 	max-height: 100%;
 }
-
+.field_info>textarea{
+	height: 20rem;
+	width: 100%;
+	font-size: 1.8rem;
+	text-indent: 3.8rem;
+	padding: 2rem;
+	box-sizing: border-box;
+	border: dashed  .1rem #2F3130;;
+}
 .field_info .field_imgs{
 	min-height: 20rem;
 	border: dashed  .1rem #2F3130;
