--- a/mobile/web/resources/css/details.css
+++ b/mobile/web/resources/css/details.css
@@ -99,6 +99,8 @@ body{
 .agentImg{
 	width: 100%;
 	height: 40rem;
+	padding: 2rem;
+	box-sizing: border-box;
 }
 .more{
 	display: none;
@@ -252,4 +254,133 @@ body{
     color: #CDCFD0;
     letter-spacing: -.55px;
 	font: 2rem/2.7rem '宋体';
+}
+/**
+底部按钮
+ */
+.nullBox{
+	width: 100%;
+	height: 16rem;
+}
+.broker{
+	position: fixed;
+	bottom: 0;
+	z-index: 99;
+	width: 100%;
+	height: 16rem;
+	background: white;
+	padding: 2rem 3rem;
+	box-sizing: border-box;
+	box-shadow: 0 -0.0625rem 0.125rem rgba(0,0,0,.1);
+}
+.broker .agent{
+	float: left;
+	width: 30%;
+	height: 100%;
+	text-align: center;
+	display: table;
+}
+.broker .agent img{
+	width: 7rem;
+	height: 7rem;
+}
+.broker .agent>span{
+	font-size: 2.2rem;
+	display: table-cell;
+	vertical-align:middle;
+}
+.broker .buttons{
+	float: right;
+	width: 66%;
+	height: 100%;
+	display: table;
+	text-align: center;
+}
+.broker .buttons span{
+	display: table-cell;
+	vertical-align:middle;
+}
+.broker span>button,.broker span>a{
+	height: 8rem;
+	display: inline-block;
+	width: 40%;
+	text-align: center;
+	font: 3rem/8rem '宋体';
+	border-radius: 1rem;
+	border: 0;
+	background: #3072F6;
+	color: white;
+}
+/**
+意向弹窗
+ */
+.intent{
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 100;
+	top:0;
+	background: rgba(0,0,0,0.5);
+}
+.intent>div{
+	display: table;
+	text-align: center;
+	width: 100%;
+	height: 100%;
+}
+.intent>div>span{
+	display: table-cell;
+	vertical-align:middle;
+}
+.intent>div>span>.intentInfo{
+	display: inline-block;
+	width: 70%;
+	height: 30rem;
+	border-radius: 1rem;
+	background: white;
+	box-sizing: border-box;
+	padding: 3rem;
+	position: relative;
+}
+
+.intentInfo .close{
+	position: absolute;
+	width: 5rem;
+	height: 6rem;
+	right: 1.5rem;
+	top: 1.5rem;
+	line-height: 5rem;
+	font-size: 3.4rem;
+	text-align: center;
+	z-index: 101;
+}
+
+.intentInfo .intentTitle{
+	width: 100%;
+	height: 6rem;
+	line-height: 6rem;
+	font-size: 5rem;
+	text-align: center;
+}
+
+.intentInfo .intentMoney{
+	display: block;
+	width: 60%;
+	height: 6.4rem;
+	line-height: 6.4rem;
+	font-size: 3.2rem;
+	margin: 2rem auto;
+}
+
+.intentInfo .intentButton{
+	display: block;
+	margin: 0 auto;
+	width: 60%;
+	height: 6.4rem;
+	font-size: 3.2rem;
+	background: #3072F6;
+	border: none;
+	color: white;
+	border-radius: 0.8rem;
 }
